<resources>
    <string name="app_name">Ezlearn</string>
    <string name="app_description">Cổng luyện thi Tiếng anh trực tuyến</string>
    <string name="success">Thành công</string>
    <string name="error">Lỗi</string>
    <string name="error_code">Lỗi %1$s: </string>
    <string name="cancel">Thoát</string>
    <string name="updating">Đang cập nhật</string>
    <string name="ok">OK</string>
    <string name="downloading">Đang tải file, vui lòng chờ trong giây lát…</string>
    <string name="download_fail">Download thất bại, thử lại sau</string>
    <string name="download_success">Download thành công</string>
    <string name="loading">Vui lòng chờ trong giây lát…</string>
    <string name="error_connect">Kiểm tra kết nối mạng!</string>
    <string name="error_progress">Có lỗi, vui lòng thử lại sau!</string>
    <string name="setting">Cài đặt</string>
    <string name="message_permission_write">Hãy cung cấp quyền Bộ nhớ để bắt đầu download</string>
    <string name="vnd">VNĐ</string>
    <string name="no_data">Chưa có dữ liệu</string>
    <string name="null_data">N/A</string>
    <string name="or">Hoặc</string>
    <string name="confirm">Xác nhận</string>
    <string name="bank_exams_title">Ngân hàng đề thi</string>
    <string name="bank_exams_description">Giúp bạn nắm vững cấu trúc đề thi THPT Quốc Gia 2017 môn tiếng Anh, luyện tập khả năng hoàn thành bài thi dưới áp lực thời gian hiệu quả nhất bằng ngân hàng câu hỏi trắc nghiệm không giới hạn với chi phí thấp nhất. </string>
    <string name="route_title">Lộ trình phù hợp</string>
    <string name="route_description">Giải đáp tư vấn rõ ràng 24/7 giúp bạn đánh giá được trình độ, khó khăn của bản thân, lộ trình luyện thi phù hợp năng lực để chuẩn bị tốt nhất cho các kì thi quan trọng, đạt được mục tiêu đặt ra trong thời gian ngắn nhất. </string>
    <string name="exams_title">Đề thi chất lượng</string>
    <string name="exams_description">Ngân hàng câu hỏi trắc nghiệm được phân loại theo chuyên đề rõ ràng, đảm bảo theo từng cấp độ, giúp bạn củng cố ngay lập tức kiến thức trọng điểm và nâng cao trình độ nhanh chóng. Giải thích, chiến lược, kĩ thuật làm bài chi tiết giúp hiểu sâu vấn đề, tiết kiệm 100% thời gian tra cứu. </string>
    <string name="next">NEXT</string>
    <string name="done">DONE</string>
    <string name="skip">SKIP</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_free_exam">Đề thi miễn phí</string>
    <string name="nav_offline_exam">ĐỀ THI OFFLINE</string>
    <string name="nav_contact">Liên hệ</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_category">Chuyên đề</string>
    <string name="nav_logout">ĐĂNG XUẤT</string>
    <string name="search">Tìm kiếm</string>
    <string name="wallet">Số dư: %1$s vnđ</string>
    <string name="click_back_again">Nhấn \'back\' lần nữa để thoát</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirm_logout">Bạn có muốn đăng xuất?</string>
    <string name="try_exam">ĐỀ THI THỬ</string>
    <string name="real_exam">ĐỀ THI CHÍNH THỨC</string>
    <string name="tab_profile">Hồ sơ</string>
    <string name="tab_history_exam">Lịch sử thi</string>
    <string name="tab_history_payment">Lịch sử nạp tiền</string>
    <string name="tab_history_buy_package">Lịch sử mua gói</string>
    <string name="tab_history_transaction">Lịch sử giao dịch</string>
    <string name="service_package_">Gói dịch vụ: </string>
    <string name="service_package">Gói dịch vụ: %1$s</string>
    <string name="balance_">Số dư tài khoản:</string>
    <string name="balance_vnd">%1$s VNĐ</string>
    <string name="balance">Số dư tài khoản</string>
    <string name="number_practice_">Số lần luyện thi:</string>
    <string name="number_practice">Số lần luyện thi</string>
    <string name="expiry_date">Hạn sử dụng:</string>
    <string name="achievements_">Thành tích:</string>
    <string name="achievements_point">%1$d điểm</string>
    <string name="achievements">Thành tích</string>
    <string name="rating_">Xếp hạng:</string>
    <string name="rating">Xếp hạng</string>
    <string name="payment">Thanh toán - Mua dịch vụ</string>
    <string name="invite_friend">Mời bạn bè</string>
    <string name="feedback">Góp ý</string>
    <string name="support">Chính sách và điều khoản</string>
    <string name="need_complete_profile">Bạn cần hoàn thiện thông tin cá nhân để xem được thứ hạng của mình.</string>
    <string name="update_profile">Cập nhật thông tin cá nhân</string>
    <string name="user_profile">Thông tin cá nhân</string>
    <string name="user_package">Gói người dùng</string>
    <string name="nick_name">Nickname</string>
    <string name="last_name">Họ</string>
    <string name="first_name">Tên</string>
    <string name="level_study">Cấp học</string>
    <string name="update">Cập nhật</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="level">Cấp độ: %1$s</string>
    <string name="history_exam_time_start">Làm bài lúc: %1$s</string>
    <string name="history_exam_code">Mã đề: %1$s</string>
    <string name="review">Xem lại</string>
    <string name="retesting">Thi lại ngay</string>
    <string name="cancel_package">Hủy</string>
    <string name="confirm_cancel_package">Bạn có muốn hủy gói %1$s</string>
    <string name="register_package">Đăng ký</string>
    <string name="confirm_register_package">Bạn có muốn đăng ký gói %1$s với giá %2$s VNĐ</string>
    <string name="channel_payment"><![CDATA[<b>Loại giao dịch: </b>%1$s]]></string>
    <string name="description_payment"><![CDATA[<b>Mô tả: </b>Nạp thẻ %1$s]]></string>
    <string name="amount_payment"><![CDATA[<b>Số tiền nạp: </b>%1$s]]></string>
    <string name="tab_lesson">Bài giảng</string>
    <string name="tab_exam">Đề thi</string>
    <string name="tab_practice">Luyện tập</string>
    <string name="taiLieu">Tài liệu</string>
    <string name="view_all"><u>Xem tất cả</u></string>
    <string name="question_list">Danh sách câu hỏi</string>
    <string name="submit">Nộp bài</string>
    <string name="question">Question</string>
    <string name="time_out">Hết giờ</string>
    <string name="need_to_review"><u>Cần xem lại</u></string>
    <string name="cancel_review"><u>Hủy xem lại</u></string>
    <string name="input_answer">Nhập câu trả lời</string>
    <string name="your_answer"><![CDATA[Câu trả lời của bạn: <b>%1$s</b>]]></string>
    <string name="answer_">Đáp án: </string>
    <string name="minute">phút</string>
    <string name="deadline">Thời hạn:</string>
    <string name="free">Free</string>
    <string name="view">Lượt xem</string>
    <string name="doing">Lượt thi</string>
    <string name="price"><![CDATA[<b>Giá: </b>%1$s]]></string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="loginFacebook">Đăng nhập với Facebook</string>
    <string name="loginGoogle">Đăng nhập với G+</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="register_new">Đăng ký mới</string>
    <string name="please_input_first_name">Tên không được để trống!</string>
    <string name="please_input_last_name">Họ không được để trống!</string>
    <string name="please_input_username">Tên đăng nhập không được để trống!</string>
    <string name="please_input_password">Mật khẩu không được để trống</string>
    <string name="please_input_re_password">Mật khẩu xác nhận không được để trống</string>
    <string name="re_password_not_correct">Mật khẩu xác nhận không chính xác</string>
    <string name="login_success">Đăng nhập thành công!</string>
    <string name="register_success">Đăng ký thành công!</string>
    <string name="logout_success">Đăng xuất thành công!</string>
    <string name="needLogin">Xin vui lòng đăng nhập để làm bài thi</string>
    <string name="register_description">Bạn chưa có tài khoản?</string>
    <string name="weak">Yếu</string>
    <string name="excellent">Xuất sắc</string>
    <string name="average">Trung bình</string>
    <string name="point">Điểm</string>
    <string name="your_point">ĐIỂM CỦA BẠN</string>
    <string name="you_need_try">Bạn cần cố gắng thêm!</string>
    <string name="detail">Chi tiết</string>
    <string name="answer_correct">Trả lời đúng: %1$d</string>
    <string name="answer_no_correct">Trả lời sai: %1$d</string>
    <string name="no_answer">Chưa trả lời: %1$d</string>
    <string name="time_answer"><![CDATA[Thời gian làm bài: <b>%1$d Giờ: %2$d Phút: %3$d Giây</b>]]></string>
    <string name="review_answer">Xem đáp án</string>
    <string name="hint">Gợi ý</string>
    <string name="address_contact">Địa chỉ số 1: 35 Vũ Trọng Phụng, Thanh Xuân, Hà Nội</string>
    <string name="tel_contact">Tel: 08.882.00.161</string>
    <string name="email_contact">Email: luyenthi.ezlearn@gmail.com</string>
    <string name="skype_contact">Skype: luyenthi.ezlearn@gmail.com</string>
    <string name="select_study_level">Chọn Cấp học</string>
    <string name="select_degree">Chọn Trình độ</string>
    <string name="you_can_change_later">Bạn có thể chỉnh sửa lại sau này</string>
    <string name="you_cant_change_late">Bạn có thể chỉnh sửa lại sau này</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="payment_by_scratch_cards">Nạp tiền qua thẻ cào</string>
    <string name="payment_by_bank">Nạp tiền qua ngân hàng</string>
    <string name="buy_service">Mua dịch vụ</string>
    <string name="viettel">Viettel</string>
    <string name="vinaPhone">VinaPhone</string>
    <string name="mobiFone">MobiFone</string>
    <string name="cardcode">Nhập card code</string>
    <string name="cardserial">Nhập card serial</string>
    <string name="paynow">Pay Now</string>
    <string name="card_error_00">Nạp thẻ thành công</string>
    <string name="card_error_99">Lỗi chưa được định nghĩa hoặc không rõ nguyên nhân</string>
    <string name="card_error_01">Địa chỉ IP truy cập API của NgânLượng.vn bị từ chối</string>
    <string name="card_error_02">Tham số gửi từ merchant tới NgânLượng.vn chưa chính xác</string>
    <string name="card_error_03">Mã merchant không tồn tại hoặc merchant đang bị khóa kết nối tới NgânLượng.vn</string>
    <string name="card_error_04">Mã checksum không chính xác</string>
    <string name="card_error_05">Tài khoản nhận tiền nạp của merchant không tồn tại</string>
    <string name="card_error_06">Tài khoản nhận tiền nạp của merchant đang bị khóa hoặc bị phong tỏa, không thể thực giao dịch nạp tiền</string>
    <string name="card_error_07">Thẻ đã được sử dụng</string>
    <string name="card_error_08">Thẻ bị khóa</string>
    <string name="card_error_09">Thẻ hết hạn sử dụng</string>
    <string name="card_error_10">Thẻ chưa được kích hoạt hoặc không tồn tại</string>
    <string name="card_error_11">Mã thẻ sai định dạng</string>
    <string name="card_error_12">Sai số serial của thẻ</string>
    <string name="card_error_13">Thẻ chưa được kích hoạt hoặc không tồn tại</string>
    <string name="card_error_14">Thẻ không tồn tại</string>
    <string name="card_error_15">Thẻ không sử dụng được</string>
    <string name="card_error_16">Số lần thử (nhập sai liên tiếp) của thẻ vượt quá giới hạn cho phép</string>
    <string name="txtSendOrder">SendOrder</string>
    <string name="txtNameOrder">Họ tên người thanh toán</string>
    <string name="txtEmail">Email người thanh toán</string>
    <string name="txtMobile">Số điện thoại người thanh toán</string>
    <string name="txtAddress">Địa chỉ người thanh toán</string>
    <string name="txtAmount">Tổng số tiền đơn hàng cần thanh toán</string>
</resources>